--- a/component/footer.html
+++ b/component/footer.html
@@ -1,5 +1,5 @@
   <div class="footer-col1" >
-    <img class="footer-logo" src="../img/icon.png">
+    <img class="footer-logo" src="\PWM-TEMPLATES\img\icon.png">
   </div>
 
   <div class="footer-col2">
