--- a/component/header.html
+++ b/component/header.html
@@ -1,12 +1,18 @@
 <nav>
   <a class="navbar-logo" href="#">
-    <img class="logo" src="../img/icon.png">
+    <img class="logo" src="\PWM-TEMPLATES\img\icon.png">
   </a>
 
   <ul>
-    <li><a href="index.html">Inicio</a></li>
+    <li><a href="\PWM-TEMPLATES\index.html">Inicio</a></li>
     <li><a href="index.html">¿Qué hacemos?</a></li>
-    <li><a href="index.html">Servicios</a></li>
-    <li><a href="index.html">Mi Area</a></li>
+    <li class="dropdown">
+      <a href="#" class="dropbtn">Servicios</a>
+      <div class="dropdown-content">
+        <a class="dropdown-content-1"href="#">Tienda</a>
+        <a class="dropdown-content-2"href="#">Taller</a>
+      </div>
+    </li>
+    <li><a href="\PWM-TEMPLATES\pages\signIn.html">Mi Area</a></li>
   </ul>
 </nav>
