--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+/*CSS COLOR*/
+nav {
+  background-color: #fff;
+  box-shadow: 1px 1px 2px #000000;
+}
+nav ul li a {
+  color: black;
+}
+nav ul li:hover,.dropdown-content-1:hover, .dropdown-content-2:hover   {
+  background: #99d98c;
+}
+.dropdown-content {
+  background-color: #fff;
+}
+
+
+
 /*CSS SIGN UP IN */
 .imgUser {
   width:150px;
@@ -118,7 +135,6 @@
 
 /*CSS  HEADER*/
 header {
-  background-color: #888888;
   width: 100%;
   position: fixed; /*absolute para que se mueva solo el ul*/
   left: 0;
@@ -156,23 +172,18 @@ nav ul li {
 nav ul li a {
   display: block;
   padding: 10px;
-  color: #fff;
   text-decoration: none;
 }
 
-nav ul li:hover,.dropdown-content-1:hover, .dropdown-content-2:hover   {
-  background: #eca023;
-}
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
   min-width: 160px;
 }
 
 .dropdown-content a {
-  color: black;
+
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -187,7 +198,7 @@ nav ul li:hover,.dropdown-content-1:hover, .dropdown-content-2:hover   {
 /*CSS FOOTER*/
 
 footer {
-  background-color: grey;
+  border-top: 1px solid #000 !important;
   position: absolute;
   left: 0;
   width: 100%;
