--- a/component/header.html
+++ b/component/header.html
@@ -6,11 +6,12 @@
   <ul>
     <li><a href="\PWM-TEMPLATES\index.html">Inicio</a></li>
     <li><a href="index.html">¿Qué hacemos?</a></li>
+    <li><a href="/PWM-TEMPLATES/pages/store.html">Tienda</a></li>
     <li class="dropdown">
-      <a href="#" class="dropbtn">Servicios</a>
+      <a href="#"  >Taller</a>
       <div class="dropdown-content">
-        <a class="dropdown-content-1"href="#">Tienda</a>
-        <a class="dropdown-content-2"href="#">Taller</a>
+        <a class="dropdown-content-1"href="/PWM-TEMPLATES/pages/workshopStore.html">Productos</a>
+        <a class="dropdown-content-2"href="/PWM-TEMPLATES/pages/workshopService.html">Servicios</a>
       </div>
     </li>
     <li><a href="\PWM-TEMPLATES\pages\signIn.html">Mi Area</a></li>
