--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,121 @@
+/*CSS TALLER*/
+.reserve {
+  margin-left: 310px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.reserve-box {
+  margin: 20px;
+  width: 100%;
+  background-color: #555555;
+  height: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+}
+
+.reserve-box-item {
+  background-color: white;
+  margin: 15px;
+  height: 50px;
+}
+/*CSS TIENDA*/
+.main-tienda {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+aside {
+  position: fixed;
+  left: 0;
+  top:95px;
+  width: 300px;
+  height: 100%;
+  padding-left: 15px;
+  font-style: italic;
+  background-color: lightgray;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+.category-content {
+  display: none;
+  min-width: 160px;
+}
+
+.category-content a {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color: black;
+  text-align: left;
+}
+
+.category:hover .category-content {
+  display: block;
+}
+.product-title {
+  text-align: center;
+}
+.filters {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 20px;
+}
+
+.filters select {
+  margin-right: 10px;
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 5px;
+}
+.order-select{
+  position: fixed;
+  right: 100px;
+}
+.products {
+  margin-left: 310px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.product {
+  width: 23.33%;
+  float: left;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.product img {
+  max-width: 100%;
+}
+
+.product h2 {
+  font-size: 1.2rem;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.product p {
+  font-size: 1rem;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.footer-store {
+  position: static;
+}
+
+
 /*CSS COLOR*/
 nav {
   background-color: #fff;
@@ -88,6 +206,7 @@ nav ul li:hover,.dropdown-content-1:hover, .dropdown-content-2:hover   {
 .ubication {
   width: 100%;
   display: flex;
+  justify-content: space-around;
   flex-direction: row;
   align-items: center;
 
