--- a/component/header.html
+++ b/component/header.html
@@ -1,6 +1,6 @@
-<nav>
+<nav class="shadow-lg">
   <a class="navbar-logo" href="#">
-    <img class="logo" src="\PWM-TEMPLATES\img\icon.png">
+    <img class="logo" src="/PWM-TEMPLATES/img/LOGO.png">
   </a>
 
   <ul>
