--- a/component/footer.html
+++ b/component/footer.html
@@ -1,17 +1,17 @@
   <div class="footer-col1" >
-    <img class="footer-logo" src="\PWM-TEMPLATES\img\icon.png">
+    <img class="footer-logo" src="/PWM-TEMPLATES/img/templatebox.png">
   </div>
 
   <div class="footer-col2">
     <p> CONTACTA CON NOSOTROS</p>
-    <p>  xxx-xxx-xxx <p>
-    <p>  example@examplename.com</p>
-    <p>  Calle YYY, XX, XXXXXX, YYYYYY</p>
+    <a href="#">  xxx-xxx-xxx </a><br>
+    <a href="#">  example@examplename.com</a><br>
+    <a href="#">  Calle YYY, XX, XXXXXX, YYYYYY</a><br>
   </div>
 
   <div class="footer-col3">
     <p>ENLACES LEGALES</p>
-    <p>Aviso Legal</p>
-    <p> Política de Privacidad</p>
-    <p>Política de Cookies</p>
+    <a href="#"> Aviso Legal</a><br>
+    <a href="#">  Política de Privacidad</a><br>
+    <a href="#"> Política de Cookies</a><br>
   </div>
