--- a/component/header.html
+++ b/component/header.html
@@ -5,7 +5,7 @@
 
   <ul>
     <li><a href="\PWM-TEMPLATES\index.html">Inicio</a></li>
-    <li><a href="index.html">¿Qué hacemos?</a></li>
+    <li><a href="/PWM-TEMPLATES/pages/whatWeDo.html">¿Qué hacemos?</a></li>
     <li><a href="/PWM-TEMPLATES/pages/store.html">Tienda</a></li>
     <li class="dropdown">
       <a href="#"  >Taller</a>
