--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,4 @@
 
-
-
-
 /*CSS BOTONES*/
 .btn-color {
   background-color: #378311;
@@ -14,7 +11,7 @@
 
 .btn-color a:hover  {
   color: white;
-  background-color: #29650f;
+  background-color: #36b920;
 }
 
 /*CSS QUE HACEMOS*/
@@ -23,7 +20,6 @@
   align-items: center;
   flex-direction: column;
   padding-inline: 50px;
-  margin-bottom: 40px;
 }
 
 .whatwedo h1, .whatwedo p {
@@ -52,6 +48,10 @@
 
 }
 
+#btn-reserve {
+  margin-bottom: 35px;
+}
+
 .reserve-box-item {
   background-color: white;
   margin: 15px;
@@ -62,6 +62,7 @@
   display: flex;
   flex-direction: row;
   height: 100%;
+  background-color: #d9ffd9;
 }
 aside {
   position: fixed;
@@ -71,12 +72,12 @@ aside {
   height: 100%;
   padding-left: 15px;
   font-style: italic;
-  background-color: lightgray;
-
+  background-color: #d5d8d5;
   display: flex;
   flex-direction: column;
   justify-content: left;
 }
+
 .category-content {
   display: none;
   min-width: 160px;
@@ -167,14 +168,14 @@ nav ul li a {
   color: white;
 }
 nav ul li a:hover,.dropdown-content-1:hover, .dropdown-content-2:hover   {
-  color: #99d98c;
+  color: #36b920;
 }
 .dropdown-content {
   background-color: rgba(42,45,49,1);
 }
 
 footer div a:hover {
-  color:  #99d98c;
+  color:  #36b920;
 }
 
   /*CSS SIGN UP IN */
@@ -194,7 +195,7 @@ footer div a:hover {
 .register-login-form form {
   width: 450px;
   text-align: center;
-  background-color: #fff;
+  background-color: #d9ffd9;
   padding: 50px;
   border: 1px solid #dbdbdb;
   border-radius: 5px;
@@ -203,7 +204,7 @@ footer div a:hover {
   margin-top: 20px;
   width: 450px;
   text-align: center;
-  background-color: #fff;
+  background-color: #d9ffd9;
   padding: 50px;
   border: 1px solid #dbdbdb;
   border-radius: 5px;
@@ -225,7 +226,7 @@ footer div a:hover {
 }
 
 .register-login-form button {
-  background-color: #0095f6;
+  background-color: #378311;
   color: #fff;
   font-weight: 600;
   border: none;
@@ -236,7 +237,7 @@ footer div a:hover {
 }
 
 .register-login-form button:hover {
-  background-color: #0072b1;
+  background-color: #36b920;
 }
 
 .register-login-form p,.register-login-form a {
@@ -244,6 +245,13 @@ footer div a:hover {
   font-size: 14px;
 }
 
+.register-login-form a, .register-login-box a {
+  color: #136c0c;
+}
+
+.register-login-form a:hover, .register-login-box a:hover {
+  color: #21b916;
+}
 
 
 /*CSS UBICATION*/
@@ -370,7 +378,7 @@ footer {
   height: auto;
   background-color: rgba(42,45,49,1);
   color: white;
-  margin-top: 20px;
+  margin-top: 2px;
 
   display: flex;
   flex-direction: row;
@@ -392,16 +400,19 @@ footer div p, footer div a  {
 }
 
 .footer-logo {
-  height: 120px;
-  width: 120px;
+  height: auto;
+  width: 150px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
 /*CSS MAIN*/
+
 main {
-  margin-top: 100px;
+  background-color: #d9ffd9;
+  margin-top: 95px;
 }
+
 .p-justify {
   text-align: justify;
 }
