--- a/component/headerLog.html
+++ b/component/headerLog.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="shadow-lg">
   <a class="navbar-logo" href="#">
     <img class="logo" src="/PWM-TEMPLATES/img/LOGO.png">
   </a>
@@ -14,6 +14,10 @@
         <a class="dropdown-content-2"href="/PWM-TEMPLATES/pages/workshopService.html">Servicios</a>
       </div>
     </li>
-    <li><a href="\PWM-TEMPLATES\pages\signIn.html">Mi Area</a></li>
+    <li><a href="\PWM-TEMPLATES\pages\dashboard\dashboardAdmin.html">
+      <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+      </svg>
+    </a></li>
   </ul>
 </nav>
