--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,49 @@
+/*CSS DASHBOARD USER*/
+.name {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+}
+
+.password {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  justify-content: center;
+}
+.password input {
+  border-radius: 6px;
+  margin: 10px;
+}
+
+
+.eliminate {
+  text-align: center;
+  background-color: red;
+  border-radius: 6px;
+  width: 180px;
+  height: 40px;
+  margin: 50px;
+}
+
+.eliminate:hover {
+  background-color: darkred;
+}
+
+.profile {
+  text-align: justify;
+  width: 100%;
+}
+
+.profile a {
+  text-decoration: none;
+  color: black;
+}
+
+.profile a:hover {
+  color: #21b916;
+}
+
 /*CSS PANEL DE CONTROL ROL: ADMIN*/
 .content-tab {
   width: 100%;
@@ -49,6 +95,15 @@
   border-radius: 10px;
   margin: 10px;
 }
+.aside-user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.aside-user h3 {
+  margin-left: 10px;
+}
+
 .aside-dashboard {
   position: fixed;
   left: 0;
@@ -114,7 +169,8 @@
   height: 500px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
+  overflow-y: scroll;
 
 }
 
