--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,37 @@
 /*CSS DASHBOARD USER*/
+.user-image {
+  margin: 30px;
+  align-content: center;
+  width: 50%;
+}
+
+hr {
+  width: 100%;
+  color: white;
+}
+
+.user-data {
+  width: 50%;
+  margin: 40px;
+}
+
 .name {
   display: flex;
   flex-direction: column;
-  width: 20%;
+  width: 70%;
+  margin-bottom: 40px;
+}
+
+.change-name {
+  width: 70%;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .password {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 70%;
   justify-content: center;
 }
 .password input {
@@ -19,20 +42,20 @@
 
 .eliminate {
   text-align: center;
-  background-color: red;
+  background-color: darkred;
   border-radius: 6px;
-  width: 180px;
-  height: 40px;
   margin: 50px;
 }
 
 .eliminate:hover {
-  background-color: darkred;
+  background-color: red;
 }
 
 .profile {
   text-align: justify;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .profile a {
@@ -411,6 +434,7 @@ footer div a:hover {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin: 5px;
 }
  .presentation img {
     width: 250px;
