--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
-/*CSS DASHBOARD USER*/
+/*Fuentes y Tamaño*/
+p, a, h2, h3 {
+  font-family: "Arial Black";
+  font-size: 1rem;
+}
+
+/*CSS PANEL DE CONTROL ROL: USER*/
 .user-image {
   margin: 30px;
   align-content: center;
@@ -134,7 +140,6 @@ hr {
   width: 300px;
   height: 100%;
   padding-left: 15px;
-  font-style: italic;
   background-color: #d5d8d5;
   display: flex;
   flex-direction: column;
@@ -434,7 +439,7 @@ footer div a:hover {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 5px;
+  margin-top: 5px;
 }
  .presentation img {
     width: 250px;
