--- a/css/main.css
+++ b/css/main.css
@@ -315,17 +315,26 @@ aside {
 
 
 /*CSS COLOR*/
+.navbar-toggler , .navbar-toggler-icon {
+  background-color: white!important;
+}
+.navbar-toggler:hover .navbar-toggler-icon:hover{
+  background-color: rgba(42,45,49,1) !important;
+}
+
+
 nav {
   background-color: rgba(42,45,49,1);
 }
-nav ul li a {
-  color: white;
+
+.nav-link:hover,.dropdown-item:hover  {
+  color: #36b920 !important;
 }
-nav ul li a:hover,.dropdown-content-1:hover, .dropdown-content-2:hover   {
-  color: #36b920;
+.dropdown-menu {
+  background-color: rgba(42,45,49,1) !important;
 }
-.dropdown-content {
-  background-color: rgba(42,45,49,1);
+.dropdown-item:hover  {
+  background-color: rgba(42,45,49,1) !important;
 }
 
 footer div a:hover {
@@ -482,8 +491,8 @@ nav{
 }
 .navbar-logo img{
   display: block;
-  width: 150px;
-  height: 150px;
+  width: 130px;
+  height: 130px;
   height: auto;
 }
 nav ul {
@@ -492,36 +501,13 @@ nav ul {
   position: fixed;
   right: 15px;
 }
-nav ul li {
-  float: left;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+.nav-link, .dropdown-item, .dropdown-menu{
+  float: left !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  font-size: 20px !important;
+  color:white !important;
 }
 
-nav ul li a {
-  display: block;
-  padding: 10px;
-  text-decoration: none;
-}
-
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  min-width: 160px;
-}
-
-.dropdown-content a {
-
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 
 
 /*CSS FOOTER*/
@@ -566,7 +552,7 @@ footer div p, footer div a  {
 
 main {
   background-color: #d9ffd9;
-  margin-top: 95px;
+  margin-top: 100px;
 }
 
 .p-justify {
