--- a/component/header.html
+++ b/component/header.html
@@ -27,7 +27,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-primary text-white" href="#">MiArea</a>
+          <a class="nav-link text-primary text-white" href="/PWM-TEMPLATES/pages/signIn.html">MiArea</a>
         </li>
       </ul>
 
