Versión 16. Cargando productos

--- a/component/product.html
+++ b/component/product.html
@@ -1,4 +1,4 @@
-<div class="card product shadow-lg">
+<div class="card product shadow-lg" id="product-template">
   <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Producto 1</p>
