Versión 17. Cargando contenido

--- a/component/carousel.html
+++ b/component/carousel.html
@@ -1,5 +1,5 @@
 <div class="carousel-home">
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+  <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -7,13 +7,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
+        <img src="https://www.estacionbpsantabrigida.com/uploads/aznbULhD/1059692-DSCF9018-2-c20ad.w1900.jpg" class="img-fluid" alt="TEMPLATE">
       </div>
       <div class="carousel-item">
-        <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
+        <img src="https://www.estacionbpsantabrigida.com/uploads/T9EKt807/IMG_20200306_105718.jpg" class="img-fluid" alt="TEMPLATE">
       </div>
       <div class="carousel-item">
-        <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
+        <img src="https://www.estacionbpsantabrigida.com/uploads/P0LQwFg0/IMG_20200309_105433.jpg" class="img-fluid" alt="TEMPLATE">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
