--- a/component/product.html
+++ b/component/product.html
@@ -1,5 +1,7 @@
 <div class="card product shadow-lg" id="product-template">
-  <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+  <div class="img-product">
+    <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+  </div>
   <div class="card-body">
     <p class="card-text">Producto 1</p>
     <h5 class="card-title">00,00€</h5>
