--- a/component/aside.html
+++ b/component/aside.html
@@ -1,8 +1,8 @@
  <div class="category">
       <h4 class="nameC">CATEGORIA 1</h4>
-      <div class="category-content">
+      <!--<div class="category-content">
         <a href="#">SUBCATEGORIA 1</a>
         <a href="#">SUBCATEGORIA 2</a>
-      </div>
+      </div>-->
  </div>
 
