--- a/css/main.css
+++ b/css/main.css
@@ -291,12 +291,15 @@
     height: 100%;
     padding-left: 15px;
     font-style: italic;
-    background-color: #d5d8d5;
+    background-color: rgba(42,45,49,1);
     display: flex;
     flex-direction: column;
     justify-content: left;
+    color: white;
   }
-
+  aside lu li a {
+    color: white;
+  }
   .category-content {
     display: none;
     min-width: 160px;
@@ -1036,7 +1039,7 @@
     height: 100%;
     padding-left: 15px;
     font-style: italic;
-    background-color: #d5d8d5;
+    background-color: rgba(42,45,49,1);
   }
 
   .category-content {
