--- a/css/main.css
+++ b/css/main.css
@@ -296,10 +296,11 @@
   aside {
     position: fixed;
     left: 0;
-    top:95px;
+    top:86px;
     width: 300px;
     height: 100%;
     padding-left: 15px;
+    padding-top: 56px !important;
     font-style: italic;
     background-color: rgba(42,45,49,1);
     display: flex;
@@ -310,7 +311,14 @@
   aside lu li a {
     color: white;
   }
-
+  .nameC {
+    color: white;
+    text-decoration: none;
+    font-size: 25px;
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-weight: 500;
+  }
   .category-content {
     display: none;
     min-width: 160px;
