--- a/component/carousel.html
+++ b/component/carousel.html
@@ -6,14 +6,14 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://www.estacionbpsantabrigida.com/uploads/aznbULhD/1059692-DSCF9018-2-c20ad.w1900.jpg" class="img-fluid" alt="TEMPLATE">
+      <div class="carousel-item active" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/aznbULhD/1059692-DSCF9018-2-c20ad.w1900.jpg);">
+
       </div>
-      <div class="carousel-item">
-        <img src="https://www.estacionbpsantabrigida.com/uploads/T9EKt807/IMG_20200306_105718.jpg" class="img-fluid" alt="TEMPLATE">
+      <div class="carousel-item" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/T9EKt807/IMG_20200306_105718.jpg);">
+
       </div>
-      <div class="carousel-item">
-        <img src="https://www.estacionbpsantabrigida.com/uploads/P0LQwFg0/IMG_20200309_105433.jpg" class="img-fluid" alt="TEMPLATE">
+      <div class="carousel-item" style="background-image: url(https://www.estacionbpsantabrigida.com/uploads/P0LQwFg0/IMG_20200309_105433.jpg);">
+
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
