--- a/css/main.css
+++ b/css/main.css
@@ -222,12 +222,6 @@
     justify-content: left;
   }
 
-
-
-
-
-
-
   /*CSS BOTONES*/
   .btn-color {
     background-color: #378311;
@@ -264,7 +258,7 @@
 
   /*CSS TALLER*/
   .reserve {
-    margin-left: 310px;
+    margin-left: 296px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -300,6 +294,9 @@
     height: 100%;
     background-color: #d9ffd9;
   }
+  .aside-mov{
+    display: none;
+  }
   aside {
     position: fixed;
     left: 0;
@@ -314,6 +311,9 @@
     flex-direction: column;
     justify-content: left;
     color: white;
+  }
+  aside button{
+    display: none !important;
   }
   aside lu li a {
     color: white;
@@ -355,7 +355,9 @@
     flex-wrap: wrap;
     justify-content: center;
   }
-
+  .d-flex {
+    width: 100%;
+  }
   .filters {
     display: flex;
     flex-direction: row;
@@ -373,7 +375,7 @@
     margin: 30px;
   }
   .products {
-    margin-left: 310px;
+    margin-left: 296px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -852,6 +854,12 @@
     width: 170px !important;
     height: 350px !important;
   }
+  .img-product {
+    height: 40%;
+  }
+  .card-body {
+    height: 60%;
+  }
   /*Fuentes y Tamaño*/
   p, a, h2, h3 {
     font-family: "Arial Black";
@@ -1074,18 +1082,45 @@
     height: 100%;
     background-color: #d9ffd9;
   }
+  .aside-mov{
+    display: block;
+    width: 100% ;
+    height: 50px;
+    padding: 20px;
+  }
+  .aside-mov button{
+    width: 100% ;
+  }
   aside {
-    display: none;
     position: fixed;
     left: 0;
-    top:95px;
+    top:86px;
     width: 300px;
     height: 100%;
     padding-left: 15px;
+    padding-top: 56px !important;
     font-style: italic;
     background-color: rgba(42,45,49,1);
+    display: none;
+    flex-direction: column;
+    justify-content: left;
+    color: white;
+    z-index: 7;
+    overflow-y: scroll;
   }
-
+  aside button {
+    display: block;
+    width: 250px;
+    margin-bottom: 20px;
+  }
+  .nameC {
+    color: white;
+    text-decoration: none;
+    font-size: 25px;
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-weight: 500;
+  }
   .category-content {
     display: none;
     min-width: 160px;
@@ -1113,12 +1148,14 @@
     flex-wrap: wrap;
     justify-content: flex-end;
   }
-
+  .d-flex {
+    width: 100%;
+  }
   .filters {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 20px;
+    margin-inline: 20px;
   }
 
   .filters select {
@@ -1148,8 +1185,8 @@
   }
 
   .product img {
-    max-width: 200px;
-    max-height: 200px;
+    width: 115px;
+    height: 100px;
   }
 
 
