--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,31 @@
 @media (min-width: 768px)  {
 
 
+  /*Prueba para dar forma a las scroll Bar*/
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #d9ffd9;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(42,45,49,1);
+    border-radius: 10px;
+  }
+
+  aside::-webkit-scrollbar-track,div::-webkit-scrollbar-track {
+    background-color: rgba(42,45,49,1);
+    border-radius: 10px;
+  }
+
+  aside::-webkit-scrollbar-thumb,div::-webkit-scrollbar-thumb {
+    background-color: #d9ffd9;
+    border-radius: 10px;
+  }
+
   /*Prueba Imagen fondo Productos*/
   .img-product {
     min-height: 200px;
