--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,17 @@
 
 /*Tablets en horizonal y escritorios normales------------------------------------------------------------------------- */
 @media (min-width: 768px)  {
-
+  /*Botones Servicios*/
+  .carousel-control-prev{
+    position: relative !important;
+  }
+  .carousel-control-next{
+    position: relative !important;
+  }
+  .control-btn {
+    display: flex;
+    justify-content: space-between;
+  }
 
   /*Prueba para dar forma a las scrollBar*/
   *::-webkit-scrollbar {
@@ -809,7 +819,6 @@
 
 /* Móviles en vertical------------------------------------------------------------------------- */
 @media (max-width: 480px) {
-
   /*Prueba Imagen fondo Productos*/
   .img-product {
     min-height: 100px;
@@ -1176,7 +1185,7 @@
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: center;
   }
   .d-flex {
     width: 100%;
@@ -1209,7 +1218,8 @@
     padding: 15px;
     float: left;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     margin-bottom: 30px;
     width: 43%;
   }
@@ -1268,7 +1278,7 @@
     height:100px;
     margin-bottom: 50px;
   }
-  
+
   .register-login-form {
     margin:30px;
     display: flex;
