--- a/css/main.css
+++ b/css/main.css
@@ -853,7 +853,804 @@
 /* Móviles en horizontal o tablets en vertical------------------------------------------------------------------------- */
 @media (max-width: 767px) {
 
+  /*Prueba para dar forma a las scrollBar*/
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #d9ffd9;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(42,45,49,1);
+    border-radius: 10px;
+  }
+
+  aside::-webkit-scrollbar-track,div::-webkit-scrollbar-track {
+    background-color: rgba(42,45,49,1);
+    border-radius: 10px;
+  }
+
+  aside::-webkit-scrollbar-thumb,div::-webkit-scrollbar-thumb {
+    background-color: #d9ffd9;
+    border-radius: 10px;
+  }
+
+  /*Prueba Imagen fondo Productos*/
+  .img-product {
+    min-height: 200px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  /*Scroll Barra Lateral Servicios Taller*/
+  #serviciosTaller {
+    overflow-y: scroll;
+  }
+
+  #reload {
+    position: fixed;
+    background-color: #21b916;
+    bottom: 130px;
+    right: 5px;
+    color: white;
+    border-radius: 50% 20% / 10% 40%;
+  }
+  #reload svg {
+    width: 40px;
+    height: 40px;
+  }
+  /*Loader*/
+  #loading {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    background-color: #fff;
+    z-index: 99;
+  }
+
+  #loading-image {
+    z-index: 100;
+
+  }
+
+
+
+  .spinner {
+    margin-top:30px;
+    width: 56px;
+    height: 56px;
+    display: grid;
+    border: 4.5px solid #0000;
+    border-radius: 50%;
+    border-right-color: #21b916;
+    animation: spinner-a4dj62 1s infinite linear;
+  }
+
+  .spinner::before,
+  .spinner::after {
+    content: "";
+    grid-area: 1/1;
+    margin: 2.2px;
+    border: inherit;
+    border-radius: 50%;
+    animation: spinner-a4dj62 2s infinite;
+  }
+
+  .spinner::after {
+    margin: 8.9px;
+    animation-duration: 3s;
+  }
+
+  @keyframes spinner-a4dj62 {
+    100% {
+      transform: rotate(1turn);
+    }
+  }
+  /*Fuentes y Tamaño*/
+  p, a, h2, h3 {
+    font-family: "Arial Black";
+    font-size: 1rem;
+  }
+
+  /*CSS PANEL DE CONTROL ROL: USER*/
+  .user-image {
+    margin: 30px;
+    align-content: center;
+    width: 50%;
+  }
+
+  hr {
+    width: 100%;
+    color: white;
+  }
+
+  .user-data {
+    width: 50%;
+    margin: 40px;
+  }
+
+  .name {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin-bottom: 40px;
+  }
+
+  .change-name {
+    width: 70%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .password {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    justify-content: center;
+  }
+  .password input {
+    border-radius: 6px;
+    margin: 10px;
+  }
+
+
+  .eliminate {
+    text-align: center;
+    background-color: darkred;
+    border-radius: 6px;
+    margin: 50px;
+  }
+
+  .eliminate:hover {
+    background-color: red;
+  }
+
+  .profile {
+    text-align: justify;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .profile a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .profile a:hover {
+    color: #21b916;
+  }
+
+  /*CSS PANEL DE CONTROL ROL: ADMIN*/
+  .content-tab {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+  }
+  .content-op-1 {
+    width: 65%;
+    border-radius: 10px;
+    border-left: 3px solid #239107 !important;
+    background-color: #ffffff;
+    overflow-y: scroll;
+  }
+  .content-op-2 {
+    width: 25%;
+    border-radius: 10px;
+    border-left: 3px solid #239107 !important;
+    background-color: #ffffff;
+    overflow-y: scroll;
+  }
+
+  .content-op-3 {
+    width: 45%;
+    border-radius: 10px;
+    border-left: 3px solid #239107 !important;
+    background-color: #ffffff;
+    overflow-y: scroll;
+  }
+  .content-op-4 {
+    width: 45%;
+    border-radius: 10px;
+    border-left: 3px solid #239107 !important;
+    background-color: #ffffff;
+    overflow-y: scroll;
+  }
+
+  .count-tab {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .count {
+    background-color: white;
+    border-left: 3px solid #239107 !important;
+    width: 15%;
+    text-align: center;
+    border-radius: 10px;
+    margin: 10px;
+  }
+  .aside-user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .aside-user h3 {
+    margin-left: 10px;
+  }
+
+  .aside-dashboard {
+    padding-right: 20px;
+  }
+
+  /*CSS BOTONES*/
+  .btn-color {
+    background-color: #378311;
+    border-radius: 0.375rem;
+  }
+  .btn-color a {
+    color: white;
+    width: 100%;
+  }
+
+  .btn-color a:hover  {
+    color: white;
+    background-color: #36b920;
+  }
+
+  /*CSS QUE HACEMOS*/
+  .whatwedo {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-inline: 50px;
+  }
+
+  .whatwedo img {
+    max-width: 100%;
+  }
+
+  .whatwedo h1, .whatwedo p {
+    margin: 2rem;
+  }
+
+  .whatwedo h1 {
+    color: #21b916;
+  }
+
+
+
+  /*CSS TALLER*/
+  .btn-reserve {
+    background-color: red;
+  }
+  .carouselTall {
+    width: 80%;
+  }
+  .reserve {
+    margin-left: 296px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .reserve-box {
+    margin: 20px;
+    width: 100%;
+    background-color: #555555;
+    height: 500px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #btn-reserve {
+    margin-bottom: 35px;
+  }
+
+  .reserve-box-item {
+    background-color: white;
+    margin: 15px;
+    height: 50px;
+  }
+  /*CSS TIENDA*/
+  /*CSS TIENDA*/
+  .main-tienda {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    background-color: #d9ffd9;
+  }
+  .aside-mov{
+    display: block;
+    width: 100% ;
+    height: 50px;
+    padding: 20px;
+  }
+  .aside-mov button{
+    width: 100% ;
+  }
+  aside {
+    position: fixed;
+    left: 0;
+    top:86px;
+    width: 300px;
+    height: 100%;
+    padding-left: 15px;
+    padding-top: 56px !important;
+    font-style: italic;
+    background-color: rgba(42,45,49,1);
+    display: none;
+    flex-direction: column;
+    justify-content: left;
+    color: white;
+    z-index: 7;
+    overflow-y: scroll;
+  }
+  aside button {
+    display: block;
+    width: 250px;
+    margin-bottom: 20px;
+  }
+  .nameC {
+    color: white;
+    text-decoration: none;
+    font-size: 25px;
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-weight: 500;
+  }
+  .category-content {
+    display: none;
+    min-width: 160px;
+    margin-left: 50px;
+  }
+
+  .category-content a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    color: black;
+    text-align: left;
+  }
+
+  .category:hover .category-content {
+    display: block;
+  }
+  .product-title {
+    text-align: center;
+  }
+  .product-aline {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .d-flex {
+    width: 100%;
+  }
+  .filters {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-inline: 20px;
+  }
+
+  .filters select {
+    margin-right: 10px;
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 5px;
+  }
+  .filters select {
+    margin: 30px;
+  }
+  .products {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .product {
+    padding: 15px;
+    float: left;
+    text-align: center;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 30px;
+    width: 43%;
+  }
+
+  .product h2 {
+    font-size: 1.2rem;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+
+  .product p {
+    font-size: 1rem;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
+
+  .footer-store {
+    position: static;
+  }
+
+
+  /*CSS COLOR*/
+  .navbar-toggler , .navbar-toggler-icon {
+    background-color: white!important;
+  }
+  .navbar-toggler:hover{
+    border-width: 1px !important;
+    border-color: #21b916 !important;
+  }
+
+  .navbar-nav {
+    padding: 5px;
+    background-color: rgba(42,45,49,1) !important ;
+  }
+
+  nav {
+    background-color: rgba(42,45,49,1);
+  }
+
+  .nav-link:hover,.dropdown-item:hover  {
+    color: #36b920 !important;
+  }
+  .dropdown-menu {
+    background-color: rgba(42,45,49,1) !important;
+  }
+  .dropdown-item:hover  {
+    background-color: rgba(42,45,49,1) !important;
+  }
+
+  footer div a:hover {
+    color:  #36b920;
+  }
+
+  /*CSS SIGN UP IN */
+  .imgUser {
+    height:100px;
+    margin-bottom: 50px;
+  }
+  .register-login-form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 60px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .register-login-form form {
+    width: 450px;
+    text-align: center;
+    background-color: #d9ffd9;
+    padding: 50px;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+  }
+  .register-login-box {
+    margin-top: 20px;
+    width: 450px;
+    text-align: center;
+    background-color: #d9ffd9;
+    padding: 50px;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+  }
+
+  .register-login-form h2 {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+
+  .register-login-form input[type="text"],
+  .register-login-form input[type="email"],
+  .register-login-form input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+  }
+  .register-login-form .button {
+    text-decoration: none;
+    background-color: #378311;
+    color: #fff;
+    font-weight: 600;
+    border: none;
+    border-radius: 3px;
+    padding: 10px 20px;
+    margin-top: 20px;
+    cursor: pointer;
+  }
+
+  .register-login-form .button:hover {
+    background-color: #36b920;
+    color: white;
+  }
+
+  .register-login-form p,.register-login-form a {
+    margin-top: 20px;
+    font-size: 14px;
+  }
+
+  .register-login-form a, .register-login-box a {
+    color: #136c0c;
+  }
+
+  .register-login-form a:hover, .register-login-box a:hover {
+    color: #21b916;
+  }
+
+
+  /*CSS UBICATION*/
+  .dato-icono a:hover {
+    color: #136c0c;
+  }
+  .ubication {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+
+  }
+  .ubication iframe {
+    margin-bottom: 1rem;
+  }
+  .description-ubication{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    width:50%;
+  }
+
+
+  /*CSS PRESENTATION*/
+  .presentation {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5px;
+  }
+
+  .presentation h1 {
+    color: #21b916;
+    margin-bottom: 1rem;
+  }
+  .presentation img {
+    display: none;
+  }
+
+  .description {
+    padding: 20px;
+    max-width: 80%;
+  }
+
+  /*CSS CAROUSEL*/
+  .carousel-home {
+    max-width: 100%;
+    margin-bottom: 1.5rem;
+  }
+
+  .carousel-item img {
+    max-height: 500px;
+    margin-left: 25%;
+  }
+
+  .carousel-item {
+    min-height: 500px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  /*CSS  HEADER*/
+  header {
+    width: 100%;
+    position: fixed; /*absolute para que se mueva solo el ul*/
+    left: 0;
+    top: 0;
+    z-index: 3;
+  }
+
+  nav{
+    float: left;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  }
+  .navbar-logo {
+    display: inline-block;
+    vertical-align: middle;
+    width: 90px;
+  }
+  .navbar-logo img{
+    display: block;
+    width: 130px;
+    height: 130px;
+    height: auto;
+  }
+  nav ul {
+    list-style: none;
+    height: fit-content;
+    position: fixed;
+    right: 15px;
+  }
+  .nav-link, .dropdown-item, .dropdown-menu{
+    float: left !important;
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 20px !important;
+    color:white !important;
+  }
+
+
+
+  /*CSS FOOTER*/
+
+  footer {
+    border-top: 1px solid #000 !important;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: rgba(42,45,49,1);
+    color: white;
+    margin-top: 2px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer-col1 {
+    width: 30%;
+  }
+  footer div p, footer div a  {
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: white;
+  }
+
+  .footer-col2, footer-col3 {
+    width: 40%;
+  }
+
+  .footer-logo {
+    height: auto;
+    width: 150px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  /*CSS MAIN*/
+
+  main {
+    background-color: #d9ffd9;
+    margin-top: 100px;
+  }
+
+  .p-justify {
+    text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  /*Teléfono, Correo y Ubicación del index*/
+  .dato-icono {
+    display: flex;
+    align-items: center;
+    vertical-align: center;
+  }
+
+  .dato-icono h2 {
+    margin: 1rem;
+  }
+
+  .dato-icono svg {
+    width: 2rem;
+    height: 2rem;
+    color: #21b916;
+  }
+
+  .dato-icono a {
+    text-decoration: none;
+    color: black;
+    margin: 1rem;
+  }
+
+  dato-icono a:hover {
+    color: #21b916 !important;
+  }
+
+
+  /*Social*/
+  /* --- Floating Share Buttons --- */
+  /* Icons/Logos from FontAwesome4*/
+
+  #floating-share-buttons {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    z-index: 3;
+  }
+  #floating-share-buttons li {
+
+  }
+  #floating-share-buttons a {
+    color: #fff;
+    text-decoration:none;
+    font-size:14px;
+  }
+  #floating-share-buttons a.share-facebook {
+    background-color: #395793 ;
+  }
+  #floating-share-buttons a.share-pinterest {
+    background-color: #b8171c ;
+  }
+  #floating-share-buttons a.share-twitter {
+    background-color: #cc3ad2;
+  }
+  #floating-share-buttons a.share-linkedin {
+    background-color: #21577e ;
+  }
+  #floating-share-buttons a.share-whatsapp {
+    background-color: #48a91f ;
+  }
+  #floating-share-buttons a.share-mail {
+    background-color: #333 ;
+  }
+  ul#floating-share-buttons {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    min-height: 100px;
+    padding: 0px;
+  }
+  ul#floating-share-buttons a {
+    width:3rem;
+    height:3rem;
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    transition: width 0.5s;
+  }
+  ul#floating-share-buttons a:hover {
+    width:4.5rem;
+  }
+
 }
+
 
 /* Móviles en vertical------------------------------------------------------------------------- */
 @media (max-width: 480px) {
@@ -1390,11 +2187,11 @@
 
 
   /*CSS UBICATION*/
-   .ubication iframe {
-     width: 350px;
-     height: 350px;
-     margin-bottom: 20px;
-   }
+  .ubication iframe {
+    width: 350px;
+    height: 350px;
+    margin-bottom: 20px;
+  }
   .ubication {
     width: 100%;
     display: flex;
@@ -1603,9 +2400,6 @@
 
 
 }
-
-
-
 
 
 
