--- a/css/main.css
+++ b/css/main.css
@@ -374,7 +374,8 @@
     padding: 15px;
     float: left;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     margin-bottom: 30px;
   }
   .img-product {
@@ -1893,7 +1894,7 @@
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: center;
   }
   .d-flex {
     width: 100%;
@@ -1924,7 +1925,8 @@
     padding: 15px;
     float: left;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     margin-bottom: 30px;
     width: 43%;
   }
